# Drone-Management-system

./: .env  .gitignore  README.md  alembic.ini  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 8398dfe233a4_creating_tables.py
src/constants/: error_messages.py  succes_messages.py
src/core/: config.py  secutity.py
src/db/: base.py  session.py
src/enums/: drones_status.py  flight_path.py  mission_status.py  path_pattern.py  user_role.py
src/exceptions/: app_exceptions.py  handler.py  register.py
src/models/: __init__.py  drone.py  flight_path.py  mission.py  mission_report.py  survey_area.py  users.py
src/repository/: drone.py  flight_path.py  mission.py  mission_report.py  survey_area.py  user_repository.py
src/routers/: auth_router.py  drone_router.py  flight_path.py  mission_report.py  mission_router.py  survey_area.py
src/schemas/: auth.py  drones.py  flight_path.py  mission.py  mission_report.py  response.py  survey_area.py  user.py
src/services/: auth_service.py  drone_service.py  flight_path_service.py  mission_report_service.py  mission_service.py  survey_area.py  user_service.py
src/utils/: dependencies.py  password_manager.py
