[project]
name = "drone-management-system"
version = "0.1.0"
description = "Drone Management System Backend"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.124.4",
    "uvicorn>=0.38.0",

    "sqlalchemy>=2.0.45",
    "alembic>=1.17.2",
    "psycopg2-binary>=2.9.11",

    "pydantic-settings>=2.12.0",
    "pydantic[email]>=2.12.5",

    "pyjwt>=2.10.1",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=3.2.2",
]

